fix: bad contrast for invoice template

--- a/client/src/component/template/invoice/template.css
+++ b/client/src/component/template/invoice/template.css
@@ -14,10 +14,11 @@
     "Open Sans",
     "Helvetica Neue",
     sans-serif;
+  color: var(--text-color);
 }
 @media (prefers-color-scheme: dark) {
   :root {
-    --background-color: #333;
+    --background-color: #040404;
     --text-color: #fff;
     --border-color: #555;
   }
